<resources>
    <string name="app_name">A&amp;MFood</string>
    <string name="this_app_bar_view">this app bar view</string>
    <string name="more_icons">more icons</string>
    <string name="lombok">Lombok, NTB</string>
    <string name="location">location</string>
    <string name="text_banner1">What would you </string>
    <string name="check_out">Check Out</string>
    <string name="find_your_food">Find Your Food…</string>
    <string name="category">Find by Category</string>
    <string name="burger">Burger</string>
    <string name="see_all">See All</string>
    <string name="text_banner2">like</string>
    <string name="text_banner3">to eat ?</string>
    <string name="arrow">arrow</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="image_item">Image Item</string>
    <string name="icon_start">Icon Start</string>
    <string name="rating">5.0</string>
    <string name="burger_with_meat">Burger With Meat</string>
    <string name="love">Love</string>
    <string name="dollar">$17,20</string>
    <string name="taco">Taco</string>
    <string name="drink">Drink</string>
    <string name="pizza">Pizza</string>
    <string name="like">Like</string>
    <string name="order">ORDER</string>
    <string name="back">Back</string>
    <string name="me">foto saya</string>
    <string name="name">Name</string>
    <string name="my_name">Achmad Muchlasin</string>
    <string name="my_photos">My Photos</string>
    <string name="bio">Android Developer</string>
    <string name="project">Project</string>
    <string name="null_">null</string>
    <string name="followers">Followers</string>
    <string name="ten">10</string>
    <string name="rate">Rating</string>
    <string name="sosial_media">SOSIAL MEDIA</string>
    <string name="instagram">Instagram</string>
    <string name="ach_muchlasin">\@ach_muchlasin</string>
    <string name="titik_dua">:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="academy">Android Engineering \nCourse at \nBinar Academy</string>
    <string name="github">Github</string>
    <string name="list_menu">List Menu</string>
    <string name="icon_grid">GridIcon</string>
    <string name="icon_list">ListIcon</string>
    <string name="title_home">Home</string>
    <string name="title_like">Like</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="startrate">startRate</string>
    <string name="deskirpsi">Description</string>
    <string name="lokasi">Location</string>
    <string name="map">map</string>
    <string name="price">Price</string>
    <string name="icon_store">icon store</string>
    <string name="image_product">Image Product</string>
    <string name="imaga_recyclerbin">Imaga RecyclerBin</string>
    <string name="icon_plus">icon plus</string>
    <string name="icon_minus">Icon Minus</string>
    <string name="current_symbol">Rp. </string>
    <string name="catatan">Catatan</string>
    <string name="keranjang">Keranjang</string>
    <string name="total_price">Total Harga</string>
    <string name="pesan">Pesan</string>
    <string name="method">Metode Pengiriman</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="send">Dikirim</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="loginlogo">loginLogo</string>
    <string name="password">Password</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone">No. Telepon</string>
    <string name="regis">Register</string>
    <string name="username">Username</string>
    <string name="iconlogout">IconLogOut</string>
    <string name="logout">LOGOUT</string>
    <string name="empty_data_cart">Empty data cart</string>
    <string name="image_view_vector">imageViewVector</string>


</resources>