<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/custom_corner_top"
    android:paddingHorizontal="16dp"
    app:layout_constraintTop_toBottomOf="@id/myGuideline">

    <TextView
        android:id="@+id/textViewNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coco_bold"
        android:text="@string/burger_with_meat"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconMaps"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/map"
        android:src="@drawable/map"
        app:layout_constraintBottom_toBottomOf="@id/textViewNameItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewNameItem" />

    <RatingBar
        android:id="@+id/Ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progress="@integer/material_motion_duration_short_2"
        android:progressTint="@color/gold"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNameItem" />


    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coco_bold"
        android:text="@string/deskirpsi"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Ratingbar" />

    <TextView
        android:id="@+id/textViewValueDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/coco_reg"
        android:gravity="start|end|top"
        android:maxLines="4"
        android:text="@string/deskirpsi"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDesc" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coco_bold"
        android:text="@string/lokasi"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/iconStore"
        app:layout_constraintTop_toBottomOf="@id/textViewValueDesc" />

    <ImageView
        android:id="@+id/iconStore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon_store"
        android:src="@drawable/store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewValueDesc" />

    <TextView
        android:id="@+id/textViewValueLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/coco_reg"
        android:gravity="start|end|top"
        android:maxLines="5"
        android:paddingEnd="40dp"
        android:text="@string/lombok"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/iconStore"
        app:layout_constraintTop_toBottomOf="@id/textViewLocation" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coco_bold"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewValueLocation" />

    <TextView
        android:id="@+id/textViewValuePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"

        android:textColor="@color/gold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPrice" />

    <Button
        android:id="@+id/btnOrder"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/order"
        android:textColor="@color/gold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewValuePrice" />

</androidx.constraintlayout.widget.ConstraintLayout>