<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="80dp"
    tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/this_app_bar_view"
                android:scaleType="center"
                android:src="@drawable/background"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cardProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/more_icons"
                android:src="@drawable/me"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/textViewLocation"
                    app:layout_constraintTop_toTopOf="@id/textViewLocation"
                    app:layout_constraintBottom_toBottomOf="@id/textViewLocation"
                    android:id="@+id/iconViewPointer"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/location"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/textViewLocation"
                    app:layout_constraintStart_toStartOf="@id/cardProfile"
                    app:layout_constraintEnd_toEndOf="@id/cardShop"
                    app:layout_constraintTop_toTopOf="@id/cardShop"
                    app:layout_constraintBottom_toBottomOf="@id/cardShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/coco_reg"
                    android:text="@string/lombok"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/iconViewArrowDown"
                    app:layout_constraintStart_toEndOf="@id/textViewLocation"
                    app:layout_constraintTop_toTopOf="@id/textViewLocation"
                    app:layout_constraintBottom_toBottomOf="@id/textViewLocation"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/baseline_keyboard_arrow_down_24" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardShop"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:elevation="10dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/check_out"
                    android:elevation="10dp"
                    android:padding="2dp"
                    android:src="@drawable/shop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewBanner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/text_banner1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewBanner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:text="@string/text_banner2"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/textViewBanner1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewBanner1" />

            <TextView
                android:id="@+id/textViewBanner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_banner3"
                android:textColor="@color/gold"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textViewBanner2"
                app:layout_constraintTop_toBottomOf="@id/textViewBanner1" />

            <EditText
                android:id="@+id/edtBanner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/corner_full"
                android:drawableStart="@drawable/baseline_search_24"
                android:elevation="8dp"
                android:hint="@string/find_your_food"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewBanner2" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/coco_bold"
                android:layout_marginTop="20dp"
                android:text="@string/category"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtBanner" />

            <TextView
                android:id="@+id/textSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/coco_bold"
                android:layout_marginEnd="30dp"
                android:text="@string/see_all"
                android:textColor="@color/gold"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtBanner" />

            <include
                android:id="@+id/cardCategory"
                layout="@layout/card_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCategory" />

            <TextView
                android:id="@+id/textViewList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/coco_bold"
                android:text="@string/list_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCategory" />

            <ImageView
                android:id="@+id/iconGridOrList"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/icon_grid"
                android:src="@drawable/more"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCategory"
                android:focusable="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCardItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewList" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>