<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_product"
            android:scaleType="centerCrop"
            android:src="@drawable/cheese_burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/coco_bold"
            android:text="@string/burger_with_meat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:id="@+id/textNameProduct"
            app:layout_constraintStart_toEndOf="@id/imageProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPriceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/coco_reg"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/imageProduct"
            app:layout_constraintTop_toBottomOf="@id/textNameProduct" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/recycle_bin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/imaga_recyclerbin"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:civ_border_width="10dp"
            app:civ_border_color="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>